# python-project-49

./: Makefile  README.md  brainprime.cast  brainprogression.cast  calc.cast  ciinemaо  demo.cast  gsd.cast  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime1.py  brain_progression.py  cli.py
