[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["т"]
packages = [
  { include = "brain_games" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


prompt = "^0.4.1"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain_calc="brain_games.scripts.brain_calc:main"
brain_gsd="brain_games.scripts.brain_gsd:main"
brain_progression="brain_games.scripts.brain_progression:main"